<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/services_user_area_layout"
   android:layout_marginTop="15dp"
    >




    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"

        >


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp"

        >


        <ImageView
            android:src="@drawable/rent_icon_colored_filled"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/houses"
            android:textSize="12sp"

            />



    </LinearLayout>



   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center_horizontal"
       android:layout_marginEnd="30dp"
       >






    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp"
        >

        <ImageView
            android:src="@drawable/land_icon_colored_filled"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </android.support.v7.widget.CardView>


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/land"
           android:textSize="12sp"

           />


   </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginEnd="30dp"

        >


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp"
        >

        <ImageView
            android:src="@drawable/transport_icon_colored_filled"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport"
            android:textSize="12sp"

            />




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginEnd="10dp"

        >


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp"

        >

        <ImageView
            android:src="@drawable/events_icon_colored_filled"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:textSize="12sp"

            />


    </LinearLayout>



</LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_horizontal"

            >


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPadding="10dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="4dp"

                >


                <ImageView
                    android:src="@drawable/shop_icon_colored_filled"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:text="@string/shop"
                android:textSize="12sp"

                />



        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginEnd="30dp"

            >






            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPadding="10dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="4dp"

                >

                <ImageView
                    android:src="@drawable/goods_icon_colored_filled"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping"
                android:textSize="12sp"

                />


        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginEnd="30dp"

            >


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPadding="10dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="4dp"
                >

                <ImageView
                    android:src="@drawable/hotel_icon_colored_filled"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotels"
                android:textSize="12sp"

                />




        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginEnd="10dp"

            >


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPadding="10dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="4dp"

                >

                <ImageView
                    android:src="@drawable/venue_icon_colored_filled"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venues"
                android:textSize="12sp"

                />


        </LinearLayout>



    </LinearLayout>





</LinearLayout>